# data-generation

./: .gitignore  README.md  blocks.py  builder.py  extras.py  feature.py  generator.py  household.py  inputs.py  model.py  person.py  pyproject.toml  run_test.py  utils.py
data/: wds.tab
docs/: dependencies.mmd  diagram.mmd
examples/: data_generation.py  dependency_tree.py  feature_tree.py  real.py  serialization.py  validation.py
otp/: Dockerfile  docker-compose.yml
scripts/: agesex2conditional.py  extract_gadow.py  extract_wds.py  multinomial2binomial.py
scripts/data/: extract_census.py  extract_gadow.py  extract_kbr.py  extract_wds.py
scripts/osm/: config.json  facilities_to_xml.py  prepare_facilities.py
scripts/processing/: plan_trips.py
scripts/visualization/: age_dist.py  person_number_dist.py
src/udg/: __init__.py  types.py  utils.py
src/udg/_data/osm/: tag_mappings.json
src/udg/_data/wroclaw/census/: age.json  child_number.json  family_type.json  household_structure.json  person_number.json  sex.json
src/udg/_data/wroclaw/gadow/: person_number.json
src/udg/_data/wroclaw/kbr/: regions.geojson  transport_mode.pkl
src/udg/_data/wroclaw/unsorted/: age_sex.json  any_travel.json  any_travel2.json  any_travel_dist.json  bicycle_comfort.json  drivers.json  drivers_dist.json  other_travels.json  other_travels_dist.json  pedestrian_inconvenience.json  public_transport_comfort.json  public_transport_punctuality.json  region.json  spend_time.json  spend_time_dist_params.json  start_hour.json  travel_chains.json  travel_chains_dist.json  trip_cancel.json
src/udg/_data/wroclaw/wds2017/: bike_number.json  car_number.json  children_number.json  person_number.json
src/udg/data/: __init__.py  generator.py  utils.py
src/udg/data/wroclaw/: __init__.py  z_palca.py
src/udg/data/wroclaw/census/: __init__.py  age.py  child_number.py  family_number.py  family_type.py  household_structure.py  person_number.py  role.py  sex.py
src/udg/data/wroclaw/gadow/: __init__.py  person_number.py
src/udg/data/wroclaw/unsorted/: __init__.py  age_sex.py  home.py  home_region.py  person_number.py  region.py  schedule.py  transport_preferences.py
src/udg/data/wroclaw/wds2017/: __init__.py  bike_number.py  car_number.py  child_number.py  children_number.py  person_number.py
src/udg/features/: __init__.py  base.py  household.py  person.py
src/udg/features/family/: __init__.py  bike_number.py  car_number.py  child_number.py  family_type.py  person_number.py
src/udg/features/household/: __init__.py  car_number.py  children_number.py  family_number.py  home.py  home_region.py  household_structure.py  person_number.py  region.py
src/udg/features/person/: __init__.py  age.py  role.py  schedule.py  sex.py  transport_mode.py  transport_preferences.py
src/udg/model/: __init__.py  builder.py  definition.py  model.py
src/udg/model/serialization/: __init__.py  converter.py  feature_dicts.py
src/udg/serialization/: converter.py  feature_dicts.py
src/udg/visualization/: __init__.py  model.py
tests/: test_test.py
